@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.19.28
+Version: 1.19.29
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
